# InnSolver

./: .gitignore  Cargo.toml  index.html  inn_solver-6d225a13d1c55b12.js  inn_solver-884763547f945f95.js
.cargo/: config.toml
.github/workflows/: deployment.yml
src/: main.rs
src/ai/: ai_communication.rs  ai_thread.rs  mod.rs
src/ai/types/: eval_value.rs  mod.rs  skill_eval.rs
src/game/: game_manager.rs  mod.rs  utils.rs
src/game/entities/: enemy.rs  entity.rs  mod.rs  player.rs
src/game/entities/armors/: mod.rs  pirate.rs
src/game/entities/enemies/: dummy.rs  mod.rs
src/game/types/: damage.rs  dict.rs  effects.rs  gear.rs  hit.rs  mod.rs  skill.rs
src/gui/: app.rs  gear.rs  gui_manager.rs  mod.rs  options.rs  stats_handler.rs  utils.rs
src/gui/views/: ai_view.rs  gear_view.rs  interactive_view.rs  mod.rs  side_panel_view.rs
src/gui/widgets/: mod.rs  number_input.rs  optional_switch.rs
